<resources>
    <string name="app_name">Rick &amp; Morty app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_detail">image_detail</string>
    <string name="hyperLinkEpisode">,</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="episode">Episode</string>
    <string name="reck_morty"><![CDATA[reck & morty]]></string>
    <string name="watch_your_movie">watch your movie</string>
    <string name="rick_morty">Rick Morty</string>
    <string name="episode_details">Episode Details</string>
    <string name="pilot">Pilot</string>
    <string name="s01e01">S01E01</string>
    <string name="december_2_2013">December 2, 2013</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="url_https_rickandmortyapi_com_api_location_1">url: https://rickandmortyapi.com/api/location/1</string>
    <string name="created_2017_11_10t12_42_04_162z">created : 2017-11-10T12:42:04.162Z</string>
</resources>